@@ -27,6 +27,9 @@ API Changes
 * GITHUB#13737: Deprecate the FacetsCollector#search utility methods and add new corresponding method to
   FacetsCollectorManager that accept a FacetsCollectorManager as last argument in place of a Collector. (Luca Cavanna)
 
+* GITHUB#13735: Add CollectorManager#forSequentialExecution to make CollectorManager creation more convenient
+  for users of the deprecated IndexSearcher#search(Query, Collector). (Greg Miller)
+
 New Features
 ---------------------
 
@@ -70,6 +73,9 @@ Improvements
 * GITHUB#12627: patch HNSW graphs to improve reachability of all nodes from entry points
 
 * GITHUB#13201: Better cost estimation on MultiTermQuery over few terms. (Michael Froh)
+
+* GITHUB#13735: Migrate monitor package usage of deprecated IndexSearcher#search(Query, Collector)
+  to IndexSearcher#search(Query, CollectorManager). (Greg Miller)
 
 Optimizations
 ---------------------
